移除手動回補介面並加入啟動自動回補
